--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,18 +1,10 @@
 @media only screen and (min-width: 1100px) {
   main {
-    margin: 0.5em auto;
-    max-width: 800px;
-
     grid-template-rows: repeat(2, 1fr);
   }
   header {
-    background-color: var(--primary-color);
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    font-size: 1em;
-    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .today {
@@ -25,8 +17,8 @@
   }
 
   .social-media {
-    padding: 2rem;
     grid-column: 3/ 4;
+    margin-top: 0;
   }
 
   nav {
@@ -40,7 +32,6 @@
 
   .main {
     margin: 0.5em auto;
-    max-width: 800px;
     grid-template-columns: 1fr 2fr 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
@@ -48,6 +39,10 @@
   .callToAction {
     grid-row: 1/3;
     grid-column: 2/3;
+  }
+
+  .callToAction img {
+    height: 34em;
   }
 
   .spotLights {
@@ -168,5 +163,15 @@
   }
   .card-view {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .spotlights{
+    grid-column: 3;
+    grid-row: 1/4;
+    display: grid;
+  }
+
+  .spotlight:last-child{
+    display: block;
   }
 }
