--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -11,17 +11,6 @@
     grid-auto-rows: minmax(min-content, max-content);
   }
 
-  .join button {
-    color: #ffffff;
-    background-color: #114277;
-    padding: 15px;
-    border-radius: 8px;
-    width: 50%;
-    margin: 0.25em auto;
-    font-weight: bolder;
-    border: none;
-  }
-
   .callToAction button {
 
     align-self: center;
@@ -62,6 +51,13 @@
     display: flex;
   }
 
+  .footer-seperation {
+    display: grid;
+    grid: 1fr / 1fr 1fr;
+    align-items: center;
+}
+
+
   .callToAction {
     grid-column: 1/4;
     grid-row: 1/2;
@@ -69,16 +65,6 @@
   .news {
     grid-column: 1/4;
     grid-row: 2/3;
-  }
-  .spotLights {
-    grid-column: 1/4;
-    grid-row: 3/4;
-  }
-  .spotLight1 {
-    margin: 0.5rem;
-  }
-  .spotLight2 {
-    margin: 0.5rem;
   }
 
   .event {
@@ -180,5 +166,15 @@
       grid-template-columns: repeat(2, 1fr);
   }
 
+  .spotlights{
+    grid-column: 1/4;
+    display: flex;
+    justify-content: space-around;
+    
+  }
 
+  .spotlight{
+
+    margin: 10px;
+  }
 }
