--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,27 +1,4 @@
 @charset "UTF-8";
-/* color */
-
-:root {
-  --primary-color: #000000;
-  --secondary-color: #1c60aa;
-  --accent1-color: #43c0cc;
-  --accent2-color: #79d8bf;
-}
-
-.primary {
-  background-color: var(--primary-color);
-  color: white;
-}
-.secondary {
-  background-color: var(--secondary-color);
-  color: white;
-}
-.accent1 {
-  background-color: var(--accent1-color);
-}
-.accent2 {
-  background-color: var(--accent2-color);
-}
 
 /* basic design */
 
@@ -41,15 +18,6 @@ body {
   padding: 0.5rem;
 }
 
-.main div {
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 8px;
-  border: 2px #51a5ff solid;
-  font-size: 1em;
-}
-
 h1 {
   display: none;
 }
@@ -67,18 +35,16 @@ h5 {
 
 /* home content */
 
-button:hover {
-  cursor: pointer;
-}
-
 strong {
   font-size: 1.75rem;
-  color: #1c60aa;
+  color: rgb(0, 73, 146);
 }
 
 .callToAction {
   display: grid;
   grid: 1fr 1fr / 1fr 1fr;
+
+
 }
 
 .callToAction picture {
@@ -100,9 +66,8 @@ strong {
   color: white;
   background-color: #00000086;
   margin: 0;
-  width: auto;
   height: fit-content;
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   z-index: 1;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -116,26 +81,27 @@ strong {
   border-radius: 8px;
   margin-bottom: 1.5rem;
   margin-right: 1.5rem;
-  font-size: 0.9em;
+  font-size: 1em;
   color: #ffffff;
-  background-color: #114277;
+  background-color: #000000a6;
   border: none;
+  box-shadow: 0 0 15px rgb(95, 95, 95);
 }
 
 button:hover {
   box-shadow: 0 0 15px rgb(0, 0, 75);
+  cursor: pointer;
 }
 
 .news {
   grid-area: 4 / 1 / 5 / 1;
-}
 
-.spotLights {
+  background-color: white;
+  padding: 1rem;
   text-align: center;
-  grid-area: 5 / 1 / 6 / 2;
-  background-color: #000000;
-  padding: 0.5rem;
-  border: none;
+  border-radius: 8px;
+  border: 2px #e5e5e5 solid;
+  font-size: 1em;
 }
 
 .spotLights img {
@@ -143,27 +109,29 @@ button:hover {
   padding: 0;
 }
 
-.spotLight1 {
-  margin: 0 auto;
-}
-.spotLight2 {
-  margin: 0 auto;
-  margin-top: 5px;
-}
-.spotLight3 {
-  display: none;
-}
-
 .event {
   display: table;
   text-align: center;
   grid-area: 2 / 1 / 3 / 2;
+
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px #e5e5e5 solid;
+  font-size: 1em;
 }
 
 .weather {
   grid-area: 3 / 1 / 4 / 2;
-
   padding: 0.5em;
+
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px #e5e5e5 solid;
+  font-size: 1em;
 }
 
 .weather img {
@@ -194,24 +162,25 @@ button:hover {
 
 .join {
   display: none;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px #e5e5e5 solid;
+  font-size: 1em;
 }
 
 /* Header/navigation style*/
 
 header {
-  background-color: var(--primary-color);
-  padding: 0rem;
+  background-color: rgb(0, 73, 146);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  font-size: 1em;
-  width: 100%;
 }
 
 .today {
   color: white;
-  font-size: 1.25rem;
-  margin: 0.5rem;
+  font-size: 1em;
+margin-bottom: .5em;
   text-align: center;
   grid-column: 1 / 3;
 }
@@ -220,10 +189,12 @@ header {
   width: 10rem;
   grid-column: 1 / 2;
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .social-media {
   padding-right: 20px;
+  margin-top: 20px;
   grid-column: 2/ 3;
   justify-self: end;
   display: flex;
@@ -253,15 +224,15 @@ nav {
   padding: 0.75rem;
   text-align: center;
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: white;
   font-weight: 700;
   transition: 0.5s;
   font-size: 1.5rem;
 }
 
 .navigation a:hover {
-  color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  color: rgb(0, 73, 146);
+  background-color: white;
 }
 
 .responsive li {
@@ -271,7 +242,8 @@ nav {
 /* Footer */
 
 footer {
-  background-color: var(--primary-color);
+  grid-template-columns: repeat(2, 1fr);
+  background-color: rgb(0, 73, 146);
   color: white;
   text-align: center;
   padding-bottom: 0.5rem;
@@ -298,12 +270,11 @@ hr {
 
 #banner {
   display: none;
-  background-color: #8de0e7;
-  border: black;
-  color: #000;
+  background-color: rgb(0, 38, 77);
+  color: white;
   padding: 1rem;
   text-align: center;
-  font-size: 1.1rem;
+  font-size: 1.5em;
 }
 
 /* Discover Page */
@@ -343,27 +314,19 @@ img {
   transition: filter 0.5s;
 }
 
-.discover-title {
-  font-size: 2em;
-  font-family: "Hind", sans-serif;
-}
-
 .number-visits {
-  width: 95%;
   font-weight: bolder;
   text-align: center;
 }
 
 table {
   margin: 10px auto;
-  border: thin solid #6c757d;
   border-collapse: collapse;
 }
 
 tr:first-child th {
-  background-color: #219ebc;
+  background-color: rgba(0, 73, 146, 0.075);;
   font-size: 24px;
-  color: white;
   padding: 10px;
   font-size: 90%;
 }
@@ -371,13 +334,12 @@ tr:first-child th {
 th,
 td {
   padding: 7px 15px;
-  border: 1px solid #fff;
+  border: 2px #e5e5e5 solid;
   font-size: 90%;
 }
 
 th {
-  background-color: #8ecae6;
-  color: black;
+  background-color: rgba(0, 73, 146, 0.075);;
   font-size: 90%;
 }
 
@@ -418,14 +380,14 @@ th {
 
 form fieldset {
   margin: 10px;
-  border: 2px solid #3585da;
+  border: 2px #e5e5e5 solid;
   border-radius: 8px;
   padding: 1rem;
   padding-inline-end: 2rem;
 }
 
 form legend {
-  color: #1c60aa;
+  color: rgb(0, 73, 146);
   font-weight: bolder;
   padding: 0.7rem;
   background-color: white;
@@ -445,7 +407,7 @@ form label.top select {
   -webkit-appearance: none;
   display: block;
   font-size: 1rem;
-  border: solid 1px #999;
+  border: 2px #e5e5e5 solid;
   border-radius: 80px;
   padding: 0.75rem;
   width: 100%;
@@ -467,7 +429,7 @@ form textarea {
 form input.submitBtn {
   display: grid;
   border: none;
-  background-color: #000;
+  background-color: black;
   color: white;
   border-radius: 8px;
   padding: 0.75rem 1.5rem;
@@ -478,12 +440,12 @@ form input.submitBtn {
 form input.submitBtn:hover {
   font-weight: bolder;
   cursor: pointer;
-  background-color: #1c60aa;
+  background-color: rgb(0, 73, 146);
   box-shadow: 0 0 15px rgb(95, 95, 95);
 }
 
 form label.top input:required {
-  border: #1c60aa solid 2.3px;
+  border: 2px #e5e5e5 solid;
 }
 
 .level {
@@ -491,7 +453,7 @@ form label.top input:required {
 }
 
 .cost {
-  background-color: #1c60aa;
+  background-color: rgb(0, 73, 146);
   color: white;
   padding: 0.25rem 1rem;
   margin-left: 0.5rem;
@@ -499,10 +461,6 @@ form label.top input:required {
 }
 
 /* Directory Page */
-
-.main-direct section h3 {
-  font-size: 1em;
-}
 
 .cards {
   width: auto;
@@ -542,7 +500,7 @@ form label.top input:required {
   padding: 0.5em;
   margin: 0.5em;
   border-radius: 8px;
-  background-color: #1c61aa0e;
+  background-color: rgba(0, 73, 146, 0.075);;
 }
 
 .list-view-btn {
@@ -558,9 +516,67 @@ form label.top input:required {
 }
 
 .list-view section:nth-child(2n) {
-  background-color: #1c61aa0e;
+  background-color: rgba(0, 73, 146, 0.199);
 }
 
 .list-view section {
-  background-color: #1142771f;
+  background-color: rgba(0, 73, 146, 0.075);
+}
+
+
+.spotlights {
+
+  background-color: rgb(0, 38, 77);
+  text-align: center;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+
+
+.spotlight:last-child{
+  display: none;
+}
+
+.spotlight img {
+width: 50%;
+padding-top: 10px;
+}
+
+.spotlight {
+  background-color: white;
+  border-radius: 8px;
+
+    margin-bottom: 0.5rem;
+padding: 1em;
+    font-size: larger;
+}
+
+.spotlight p{
+color: rgb(0, 73, 146);
+font-weight: bolder;
+}
+
+.join-button a {
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
+}
+
+.join button {
+  display: block;
+  padding: 1rem;
+    background-color: rgb(0, 73, 146);
+    border-radius: 8px;
+    margin: 0.25em auto;
+    font-weight: bolder;
+  text-decoration: none;
+  color: white;
+width: 50%;
+}
+
+.join a {
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
 }
