--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -37,6 +37,10 @@
   .callToAction {
     grid-row: 1/3;
     grid-column: 2/3;
+    background-color: black;
+    z-index: 0;
+    border-radius: 8px;
+    padding: 20px;
   }
 
   .spotLights {
