--- a/temple-inn-and-suite/css/small.css
+++ b/temple-inn-and-suite/css/small.css
@@ -1,14 +1,20 @@
 /* basic design */
 
-header,
-nav,
-main,
-footer,
-body {
-  font-family: "Hind", sans-serif;
+h1,
+h2,
+h3,
+h4,
+header {
+  font-family: "Montserrat", sans-serif;
 }
 
-.main {
+p,
+footer,
+article {
+  font-family: "Lato", sans-serif;
+}
+
+main {
   display: grid;
   grid-auto-rows: minmax(min-content, max-content);
   margin-bottom: 0.5rem;
@@ -16,104 +22,122 @@ body {
   padding: 0.5rem;
 }
 
-
+article {
+  display: block;
+  border-radius: 10px;
+  padding: 0.75em;
+  text-align: center;
+  box-shadow: 2px 2px 5px rgb(95, 95, 95);
+}
+h2 {
+  display: none;
+}
+h1 {
+  font-size: 1.25em;
+  text-shadow: 1.5px 2px 0px  #8bd02367;
+}
 
 /* Header */
 
 header {
-    background-color: rgb(0, 73, 146);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  
-  .today {
-    color: white;
-    font-size: 1em;
-    margin-bottom: 0.5em;
-    text-align: center;
-    grid-column: 1 / 3;
-  }
-  
-  #logo img {
-    width: 10rem;
-    grid-column: 1 / 2;
-    padding: 1rem;
-    padding-bottom: 0;
-  }
-  
-  .social-media {
-    padding-right: 20px;
-    margin-top: 20px;
-    grid-column: 2/ 3;
-    justify-self: end;
-    display: flex;
-  }
-  
-  .icons {
-    padding: 0.4em;
-    width: 2.25rem;
-  }
-  
-  nav {
-    grid-column: 1 / 6;
-    grid-row: 2 / 3;
-  }
-  .navigation {
-    list-style: none;
-    padding: 0rem;
-  }
-  .navigation li:first-child {
-    display: block;
-  }
-  .navigation li {
-    display: none;
-  }
-  .navigation a {
-    display: block;
-    padding: 0.75rem;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    font-weight: 700;
-    transition: 0.5s;
-    font-size: 1.5rem;
-  }
-  
-  .navigation a:hover {
-    color: rgb(0, 73, 146);
-    background-color: white;
-  }
-  
-  .responsive li {
-    display: block;
-  }
-  
-  /* Footer */
-  
-  footer {
-    grid-template-columns: repeat(2, 1fr);
-    background-color: rgb(0, 73, 146);
-    color: white;
-    text-align: center;
-    padding-bottom: 0.5rem;
-    width: 100%;
-    margin-top: 1em;
-  }
-  
-  .map {
-    list-style: none;
-    color: white;
-  }
-  
-  .contact a {
-    text-decoration: none;
-  }
-  .footer-logo {
-    width: 120px;
-    padding-top: 1rem;
-  }
-  
-  hr {
-    color: white;
-    margin: 1rem;
-  }
+  background-color: white;
+  box-shadow: 1px 1px 5px rgb(95, 95, 95);
+  display: block;
+  text-align: center;
+}
+.today {
+  font-size: 1em;
+  margin-bottom: 0.5em;
+  text-align: center;
+  grid-column: 1 / 3;
+}
+.header-logo {
+  width: 6em;
+  padding: 1em;
+  padding-bottom: 0;
+}
+
+/* Navigation */
+.navigation {
+  padding: 0rem;
+  margin-left: 3em;
+  margin-right: 3em;
+}
+nav {
+  padding-bottom: .5em;
+}
+.navigation li:first-child {
+  display: block;
+}
+.navigation li {
+  display: none;
+}
+.navigation a {
+  display: grid;
+  color: black;
+  padding: 0.75rem;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.25em;
+  transition: 0.5s;
+  border-radius: 8px;
+}
+.navigation a:hover {
+  color: white;
+  background-color: #8ad023;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.responsive li {
+  display: block;
+}
+strong {
+  color: #8ad023;
+}
+strong:hover {
+  color: white;
+}
+
+/* Footer */
+
+footer {
+  grid-template-columns: repeat(2, 1fr);
+  background-color: #2f5597;
+  color: white;
+  text-align: center;
+  padding-bottom: 0.5rem;
+  width: 100%;
+  margin-top: 1em;
+}
+
+.map {
+  list-style: none;
+  color: white;
+}
+
+.contact a {
+  text-decoration: none;
+}
+.footer-logo {
+  width: 120px;
+  padding-top: 1rem;
+}
+.social-media {
+  margin-bottom: 10px;
+}
+
+.icons {
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  width: 2.25rem;
+}
+
+/* Home */
+
+.spotlights {
+  display: block;
+  border-radius: 10px;
+  padding: 0.75em;
+  text-align: center;
+  box-shadow: 2px 2px 5px rgb(95, 95, 95);
+}
